Successful downgrade to Java 11